--- a/matLab/templates/matLab/formulaire.html
+++ b/matLab/templates/matLab/formulaire.html
@@ -1,9 +1,10 @@
 {% extends 'matLab/base.html' %}
+{% load i18n %}
 
 {% block content %}
-	<h1>Renouvellement Licence</h1>
+	<h1>{% blocktrans %}Renouvellement Licence{% endblocktrans %}</h1>
 		<form method="POST" class="post-form">{% csrf_token %}
 			{{ form.as_p }}
-			<button type="submit" class="save btn btn-default">Save</button>
+			<button type="submit" class="save btn btn-default">{% trans "Envoyer" %}</button>
 	</form>
 {% endblock %}
