--- a/matLab/templates/matLab/base.html
+++ b/matLab/templates/matLab/base.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/matLab.css' %}">
         <script type="text/javascript" src="{% static 'js/jquery-3.3.1.js' %}"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <script type="text/javascript" src="{% static 'js/matLab.js' %}"></script>
     </head>
 <body>
