--- a/matLab/static/css/matLab.css
+++ b/matLab/static/css/matLab.css
@@ -3,12 +3,20 @@
 	text-align : center;
 	background-color: aliceblue;
 	padding: 20px 0 10px 0;
+	overflow: hidden;
+	height: auto;
+}
+
+.page-header h1 {
+	float: left;
+	width: 60%;
 }
 
 .page-header .language {
-	top: 60px;
-	position: absolute;
-	right: 20px;
+	float: left;
+	width: 17%;
+	margin-right: 3%;
+	margin-top: 25px;
 }
 
 .page-header a {
@@ -18,6 +26,19 @@
 
 .page-header a:hover {
 	text-decoration: none;
+}
+
+.page-header .logo {
+	overflow : hidden;
+	height: auto;
+	width: 10%;
+	float : left;
+	margin-left: 3%;
+	margin-right: 7%;
+}
+
+.page-header .logo img {
+	width : 100%;
 }
 
 .content-container {
