--- a/matLab/templates/matLab/base.html
+++ b/matLab/templates/matLab/base.html
@@ -12,6 +12,9 @@
     </head>
 <body>
     <div class="page-header">
+		<div class="logo">
+			<img src="{% static 'img/GeePs-logo-couleur-francais.jpg' %}" alt="Logo" />
+		</div>
         <h1><a href="/">GeePs Matlab License Center</a></h1>
         <div class="language">
 		<form action="/i18n/setlang/" method="post">
