--- a/matLab/templates/matLab/base.html
+++ b/matLab/templates/matLab/base.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>GeePs Matlab License Center</title>
+        <meta charset="utf-8" />
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/matLab.css' %}">
