Bug PDF corrigé

--- a/matLab/templates/matLab/pdf.html
+++ b/matLab/templates/matLab/pdf.html
@@ -1,5 +1,7 @@
 {% extends 'matLab/base.html' %}
 {% load i18n %}
+
+{% block content %}
 		<style>
 	.page-header {
 	margin: 0;
@@ -65,3 +67,5 @@ form p label {
 		</ul>
 	</body>
 </html>
+
+{% endblock %}
