--- a/matLab/templates/matLab/pdf.html
+++ b/matLab/templates/matLab/pdf.html
@@ -1,71 +1,87 @@
-{% extends 'matLab/base.html' %}
-{% load i18n %}
+{% extends 'matLab/base.html'%}
 
 {% block content %}
-		<style>
+	<style>
 	.page-header {
-	margin: 0;
-	text-align : center;
-	background-color: aliceblue;
-	padding: 20px 0 10px 0;
-}
+		margin: 0;
+		text-align : center;
+		background-color: aliceblue;
+		padding: 20px 0 10px 0;
+		overflow: hidden;
+		height: auto;
+	}
 
-.page-header .language {
-	top: 60px;
-	position: absolute;
-	right: 20px;
-}
+	.page-header h1 {
+		float: left;
+		width: 60%;
+	}
 
-.page-header a {
-	color: #0c477a;
-	font-size: 28pt;
-}
+	.page-header .language {
+		float: left;
+		width: 17%;
+		margin-right: 3%;
+		margin-top: 25px;
+	}
 
-.page-header a:hover {
-	text-decoration: none;
-}
+	.page-header a {
+		color: #0c477a;
+		font-size: 28pt;
+		text-decoration: none;
+	}
 
-.content-container {
-	margin: 0 auto;
-	width: 80%;
-}
+	.page-header a:hover {
+		text-decoration: none;
+	}
 
-.content-container h1 {
-	text-align: center;
-	margin-bottom: 20px;
-	font-size: 22pt;
-	color: gray;
-}
+	.page-header .logo {
+		overflow : hidden;
+		height: auto;
+		width: 10%;
+		float : left;
+		margin-left: 3%;
+		margin-right: 7%;
+	}
 
-form {
-	margin: 0 auto;
-	width: 50%;
-}
+	.page-header .logo img {
+		width : 100%;
+	}
 
-form p {
-	margin-left: 28%;
-}
+	.content-container {
+		margin: 0 auto;
+		width: 80%;
+	}
 
-form p label {
-	width: 160px;
-}
+	.content-container h1 {
+		text-align: center;
+		margin-bottom: 20px;
+		font-size: 22pt;
+		color: gray;
+	}
+
+	form {
+		margin: 0 auto;
+		width: 50%;
+	}
+
+	form p {
+		margin-left: 28%;
+	}
+
+	form p label {
+		width: 160px;
+	}
+
 	</style>
-	</head>
-	<body>
-		<img scr="../../static/img/GeePs-logo-couleur-francais.jpg"/>
-		<h1>Détail renouvellement licence</h1>
-		<ul>
-			<li>Prénom : {{licence.firstname}} </li>
-			<li>Nom : {{licence.name}}</li>
-			<li>Email : {{licence.email}}</li>
-			<li>Téléphone : {{licence.telephone}}</li>
-			<li>Bureau : {{licence.bureau}}</li>
-			<li>Bâtiment : {{licence.batiment}}</li>
-			<li>Version MatLab : {{licence.matlabRelease}}</li>
-			<li>Système: {{licence.operatingSystem}}</li>
-			<li>HostID : {{licence.hostID}}</li>
-		</ul>
-	</body>
-</html>
-
+	<h2>Détail renouvellement licence</h2>
+	<ul>
+		<li>Prénom : {{licence.firstname}} </li>
+		<li>Nom : {{licence.name}}</li>
+		<li>Email : {{licence.email}}</li>
+		<li>Téléphone : {{licence.telephone}}</li>
+		<li>Bureau : {{licence.bureau}}</li>
+		<li>Bâtiment : {{licence.batiment}}</li>
+		<li>Version MatLab : {{licence.matlabRelease}}</li>
+		<li>Système: {{licence.operatingSystem}}</li>
+		<li>HostID : {{licence.hostID}}</li>
+	</ul>
 {% endblock %}
