--- a/matLab/templates/matLab/base.html
+++ b/matLab/templates/matLab/base.html
@@ -14,7 +14,7 @@
 <body>
     <div class="page-header">
 		<div class="logo">
-			<img src="{% static 'img/GeePs-logo-couleur-francais.jpg' %}" alt="Logo" />
+			<img src="{% static 'img/geeps-trans.png' %}" alt="Logo" />
 		</div>
         <h1><a href="/">GeePs Matlab License Center</a></h1>
         <div class="language">
